--- a/style.css
+++ b/style.css
@@ -62,6 +62,8 @@ html {
   cursor: pointer;
   -webkit-transition: 0.9s;
   transition: 0.9s;
+  position: relative;
+  z-index: 5;
 }
 
 .options .options_menu:hover {
@@ -73,6 +75,28 @@ html {
   list-style-type: none;
   margin-left: auto;
   margin-right: auto;
+}
+
+#info {
+  height: 100%;
+}
+
+.submit_settings {
+  position: absolute;
+  bottom: 0;
+  text-align: center;
+  width: 100%;
+  border-radius: 20%;
+  padding: 1rem;
+  background-color: #ff1053;
+  color: #e8eddf;
+  font-size: 1.5rem;
+  font-weight: 1000;
+}
+
+#settings {
+  height: 100%;
+  position: relative;
 }
 
 li {
