--- a/style.scss
+++ b/style.scss
@@ -58,7 +58,7 @@ html {
   border: 7px solid $space_grey;
   border-radius: 20%;
   padding: 0;
-  width:70%;
+  width:90%;
   margin-left: auto;
   margin-right: auto;
   overflow: hidden;
@@ -91,21 +91,46 @@ html {
 #settings {
   height: 100%;
   position: relative;
-  .tryB {
-    width: 100%;
-    background-color: $awesome;
-    color: $pearl;
-    font-size: 1.5rem;
-    font-weight: 1000;
+  // .tryB {
+
+  //   background-color: $awesome;
+  //   color: $pearl;
+  //   font-size: 1.5rem;
+  //   font-weight: 1000;
+
+  //   float: left;
+
+  //   cursor: pointer;
+  //   transition: 0.9s;
+  //   position: relative;
+  // }
+  .subSettingsContainer{
+    text-align: center;
     margin: 0.5rem 0;
     padding: 0.5rem 0;
-    float: left;
-    text-align: center;
-    cursor: pointer;
-    transition: 0.9s;
-    position: relative;
-    z-index: 5;
+    width: 100%;
+    font-weight: 1000;
+    font-size: 1rem;
   }
+
+  .subSettings{
+    width: 33%;
+    float: left;
+  }
+  
+  .mainB {
+    background-color: $awesome;
+    color: $pearl
+  }
+
+  .secondB{
+
+  }
+
+  .colorsSettings {
+    
+  }
+
   .submit_settings{
     position: absolute;
     bottom: 0;
@@ -153,6 +178,7 @@ html {
 @media only screen and (max-width: 767px) {
   .main{
     grid-auto-columns: 100%;
+    grid-row-gap: 3rem;
   }
   .header{
     font-size: 12vw;
@@ -161,6 +187,7 @@ html {
   .options {
     grid-column: 1;
     grid-row: 1;
+    width: 100%;
   }
   .game_container {
     grid-column: 1;
@@ -174,6 +201,7 @@ html {
   @media only screen and (max-width: 1204px) and (min-width: 768px) {
     .main{
       grid-auto-columns: 50%;
+      grid-row-gap: 3rem;
     }
     .header{
       font-size: 10vw;
@@ -187,7 +215,8 @@ html {
       grid-row: 1;
     }
     .draw {
-      grid-column: 1-2;
+      grid-column: 1/ span 2;
       grid-row: 2;
+      text-align: center;
     }
 }
