--- a/style.scss
+++ b/style.scss
@@ -124,11 +124,13 @@ html {
   }
 
   .secondB{
-
+    height: 100%;
+    width: 100%;
   }
 
   .colorsSettings {
-    
+    height: 100%;
+    width: 50%;
   }
 
   .submit_settings{
