--- a/style.css
+++ b/style.css
@@ -118,6 +118,16 @@ html {
   color: #e8eddf;
 }
 
+#settings .secondB {
+  height: 100%;
+  width: 100%;
+}
+
+#settings .colorsSettings {
+  height: 100%;
+  width: 50%;
+}
+
 #settings .submit_settings {
   position: absolute;
   bottom: 0;
