--- a/style.scss
+++ b/style.scss
@@ -7,7 +7,8 @@ $pearl: #e8eddf;
 
 html {
   padding: 0;
-  margin: 0;
+  margin-right: 8px;
+  margin-left: -5px;
   box-sizing: border-box;
   background-color: $pearl;;
 }
@@ -21,6 +22,7 @@ html {
 .main {
   display: grid;
   grid-auto-columns:33%;
+  grid-auto-rows: 33%;
 }
 // MIDDLE SECTOR
 .game_container {
@@ -62,6 +64,7 @@ html {
   margin-left: auto;
   margin-right: auto;
   overflow: hidden;
+  height: auto;
   .options_menu {
     width: 50%;
     background-color: $awesome;
@@ -83,27 +86,33 @@ html {
   }
 
 }
-
+.divP {
+  height: 20%;
+  padding: 1rem;
+  color: $space_grey;
+  font-weight: bold;
+  text-align: left;
+}
 #info {
   height: 100%;
 }
+.option {
+  height: 20%;
 
+}
+.suboption {
+  width: 33%;
+  float: left;
+  height: 100%;
+}
+.colorsSettings {
+  width: 50%;
+  float: left;
+  height: 50%;
+}
 #settings {
   height: 100%;
   position: relative;
-  // .tryB {
-
-  //   background-color: $awesome;
-  //   color: $pearl;
-  //   font-size: 1.5rem;
-  //   font-weight: 1000;
-
-  //   float: left;
-
-  //   cursor: pointer;
-  //   transition: 0.9s;
-  //   position: relative;
-  // }
   .subSettingsContainer{
     text-align: center;
     margin: 0.5rem 0;
@@ -134,8 +143,7 @@ html {
   }
 
   .submit_settings{
-    position: absolute;
-    bottom: 0;
+    height: 20%;
     text-align: center;
     width: 100%;
     border-radius: 20%;
