--- a/style.css
+++ b/style.css
@@ -18,7 +18,6 @@ html {
   display: -ms-grid;
   display: grid;
   grid-auto-columns: 33%;
-  grid-auto-rows: 33%;
 }
 
 .game_container {
@@ -85,7 +84,6 @@ html {
   -webkit-transition: 0.9s;
   transition: 0.9s;
   position: relative;
-  z-index: 5;
 }
 
 .options .options_menu:hover {
@@ -105,60 +103,40 @@ html {
   height: 100%;
 }
 
-.option {
-  height: 20%;
-}
-
-.suboption {
-  width: 33%;
-  float: left;
-  height: 100%;
-}
-
-.colorsSettings {
-  width: 50%;
-  float: left;
-  height: 50%;
-}
-
 #settings {
   height: 100%;
+}
+
+#settings .suboption {
+  width: 33.3%;
+  color: #494947;
+  font-size: 1.5rem;
+  font-weight: 1000;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  float: left;
+  text-align: center;
+  cursor: pointer;
+  -webkit-transition: 0.9s;
+  transition: 0.9s;
   position: relative;
 }
 
-#settings .subSettingsContainer {
-  text-align: center;
-  margin: 0.5rem 0;
-  padding: 0.5rem 0;
-  width: 100%;
-  font-weight: 1000;
-  font-size: 1rem;
-}
-
-#settings .subSettings {
-  width: 33%;
-  float: left;
-}
-
-#settings .mainB {
+#settings .suboption_main {
+  cursor: default;
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
   background-color: #ff1053;
   color: #e8eddf;
 }
 
-#settings .secondB {
-  height: 100%;
-  width: 100%;
-}
-
-#settings .colorsSettings {
-  height: 100%;
-  width: 50%;
+#settings .option {
+  height: 20%;
 }
 
 #settings .submit_settings {
   height: 20%;
   text-align: center;
-  width: 100%;
   border-radius: 20%;
   padding: 1rem;
   background-color: #ff1053;
