--- a/style.scss
+++ b/style.scss
@@ -14,7 +14,7 @@ html {
 }
 .header {
   text-align: center;
-  padding: 5vw;
+  padding: 0vw;
   font-size: 5vw;
   color: $awesome;
 }
@@ -26,7 +26,7 @@ html {
 // MIDDLE SECTOR
 .game_container {
   grid-row: 1;
-  grid-column: 2;
+  grid-column-start: 2;
   padding-top: 100%;
   width: 100%;
   margin-left: auto;
@@ -44,12 +44,13 @@ html {
   display: grid;
   border: 3px solid $space_grey;
   text-align: center;
-  .square {
-    border: 3px solid $space_grey;
-    transition: 1s;
-    cursor: pointer;
-    background-color: #e8eddf;
-  }
+
+}
+.square {
+  border: 3px solid $space_grey;
+  transition: 1s;
+  cursor: pointer;
+  background-color: #e8eddf;
 }
 // FIRST SECTOR
 .options {
@@ -76,7 +77,6 @@ html {
     text-align: center;
     cursor: pointer;
     transition: 0.9s;
-    position: relative;
   }
   .options_menu:hover {
     background-color: $pearl !important;
@@ -94,7 +94,9 @@ html {
 #info {
   height: 100%;
 }
-
+.info3{
+  padding:5px;
+}
 
 #settings {
   height: 100%;
@@ -121,7 +123,7 @@ html {
     color: $pearl;
   }
   .option {
-    height: 20%;
+    height: 18%;
   }
   .submit_settings{
     height: 20%;
@@ -164,7 +166,35 @@ html {
 #again {
   display: none;
 }
+.suboption_second1 {
+  border-bottom-left-radius: 1rem;
+  border-top-right-radius: 1rem;
+}
 
+.suboption_second2 {
+  border-top-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+
+.suboption_second1:hover {
+  transition: 0.25s;
+  box-shadow: inset 0px 0px 0px 10px $awesome;
+
+}
+.suboption_second2:hover {
+  transition: 0.25s;
+  box-shadow: inset 0px 0px 0px 10px $awesome;
+
+  
+}
+.suboption_second {
+  opacity: 70%;
+  transition: 0.25s;
+}
+.suboption_second:hover{
+  transition: 0.25s;
+  opacity: 100%;
+}
 
 @media only screen and (max-width: 767px) {
   .main{
@@ -210,4 +240,20 @@ html {
       grid-row: 2;
       text-align: center;
     }
+}
+#left_b {
+background-color: $pearl;
+color: $awesome;
+}
+#left_b2 {
+background-color: $awesome;
+color: $pearl;
+}
+#right_b {
+background-color: $awesome;
+color: $pearl;
+}
+#right_b2 {
+background-color: $pearl;
+color: $awesome;
 }
