--- a/style.scss
+++ b/style.scss
@@ -252,28 +252,7 @@ html {
   }
 }
 // THIRD SECTOR
-.draw {
-  grid-row: 1;
-  grid-column: 3;
-  text-align: center;
-}
-#draw_player {
-  border: 3px solid $space_grey;
-  border-radius: 20%;
-  height: 60px;
-  width: 50%;
-  background-color: $awesome;
-  text-align: center;
-  transition: 0.5s;
-  margin-left: auto;
-  margin-right: auto;
-}
-#game_state {
-  display: none;
-}
-#again {
-  display: none;
-}
+
 .suboption_second1 {
   border-bottom-left-radius: 1rem;
   border-top-right-radius: 1rem;
@@ -335,9 +314,36 @@ html {
     grid-column: 1;
     grid-row: 2;
   }
-  .draw {
-    grid-column: 1;
-    grid-row: 3;
+  #settings{
+    .suboption {
+      font-size: 1rem;
+    }
+    .submit_settings{
+      font-size: 1rem;
+    }
+  }
+  .options{
+    .options_menu {
+      font-size: 1rem;
+    }
+  }
+  .divP {
+    padding: 0.5rem;
+  }
+  .winText {
+  font-size: 3.5rem;
+  }
+  .resetBtnP {
+    font-size: 1.0rem;
+  }
+  .resetBtnB {
+    font-size: 1.0rem;
+  }
+  .resetBtnY {
+    font-size: 1.0rem;
+  }
+  .resetBtnT {
+    font-size: 1.0rem;
   }
 }
   @media only screen and (max-width: 1204px) and (min-width: 768px) {
@@ -356,10 +362,21 @@ html {
       grid-column: 2;
       grid-row: 1;
     }
-    .draw {
-      grid-column: 1/ span 2;
-      grid-row: 2;
-      text-align: center;
+    #settings{
+      .suboption {
+        font-size: 1rem;
+      }
+      .submit_settings{
+        font-size: 1rem;
+      }
+    }
+    .options{
+      .options_menu {
+        font-size: 1rem;
+      }
+    }
+    .divP {
+      padding: 0.5rem;
     }
 }
 #left_b {
